--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
 /* general styling */
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; /*1rem = 10px, 10px/16px = 62.5%*/
+}
 *,
 *::after,
 *::before {
@@ -7,15 +12,16 @@
   box-sizing: inherit;
 }
 
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; /*1rem = 10px, 10px/16px = 62.5%*/
-}
-
 body {
   width: 100vw;
 }
 
+h1 {
+  font-size: 10rem;
+  text-align: center;
+  margin-bottom: 3rem;
+  padding-top: 3rem;
+}
 /* navbar  */
 
 header {
@@ -27,10 +33,6 @@ header {
   top: 0;
   width: 100%;
   align-items: center;
-}
-
-nav {
-  width: 20%;
 }
 
 #logo {
@@ -58,6 +60,7 @@ nav {
 
 main {
   margin-top: 11rem;
+  width: 100%;
 }
 
 /* footer style */
@@ -137,4 +140,67 @@ blockquote {
 
 /* media page */
 
+.youtube-documentary {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
+.youtube-documentary-head {
+  width: 60%;
+  float: left;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.youtube-documentary-video {
+  border: 2px solid black;
+  width: 60%;
+  height: 60vh;
+}
+
+#clarkson-documentary-title {
+  width: 100%;
+  height: 100%;
+}
+
+/* podcast */
+.podcast {
+  width: 80%;
+  margin: 5rem auto;
+}
+
+.podcast-header {
+  color: black;
+  margin-bottom: 2rem;
+}
+
+.podcast-header a {
+  font-size: 2rem;
+}
+
+/* st nazaire books */
+.st-nazaire-books {
+  width: 90%;
+  margin: 0 auto;
+  border: 2px solid black;
+}
+figure {
+  width: 49%;
+  align-content: center;
+}
+
+figure:nth-child(odd) {
+  float: right;
+  margin-left: 1rem;
+}
+figure:nth-child(even) {
+  float: left;
+}
+
+figure img {
+  height: 70%;
+  width: 50%;
+}
