--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ header {
   top: 0;
   width: 100%;
   align-items: center;
+  z-index: 99;
 }
 
 #logo {
@@ -100,7 +101,7 @@ footer {
   width: 32px;
   top: 20px;
   right: 20px;
-  z-index: 5;
+  z-index: 99;
   opacity: 0;
   cursor: pointer;
 }
@@ -110,7 +111,7 @@ footer {
   font-size: 3rem;
   top: 25px;
   right: 25px;
-  z-index: 2;
+  z-index: 99;
 }
 
 .mobile-navbar .mobile-navlinks {
@@ -136,6 +137,121 @@ footer {
 
 /* index page */
 
+.hero {
+  width: 100%;
+  height: 70vh;
+  background: #ccc;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.slide-show-container {
+  height: 100%;
+  width: 70%;
+  position: relative;
+  float: right;
+}
+/* CSS Styles in common for all slides */
+.wrapper-one,
+.wrapper-two,
+.wrapper-three {
+  background-color: #eee;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-position: center; /* Center the image */
+  background-size: cover;
+  display: flex;
+}
+
+/* CSS Styles for each slide */
+/* Just add the image as background attribute and add some animation */
+
+.wrapper-one {
+  background-image: url("../images/st\ nazaire\ painting.jpg");
+}
+
+.wrapper-two {
+  background-image: url("../images/HMS Campbeltown hit dock 2.webp");
+  animation: slideTwoAnim 20s infinite;
+}
+
+.wrapper-three {
+  background-image: url("../images/modification to campbeltown.webp");
+  animation: slideThreeAnim 20s infinite;
+}
+
+/* Styles for the text */
+
+.wrapper-text {
+  position: relative;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper-text-inner {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border: 2px solid red;
+  padding: 2rem;
+  border-radius: 1rem;
+  color: red;
+  background: white;
+}
+
+/* Animations */
+@keyframes slideTwoAnim {
+  0% {
+    opacity: 0;
+  }
+  17% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  67% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes slideThreeAnim {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  67% {
+    opacity: 1;
+  }
+  83% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.hero-header-text {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border: 2px solid red;
+  padding: 2rem;
+  border-radius: 1rem;
+  color: red;
+}
 /* gallery page */
 
 .row {
