--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  width: 100vw;
+  max-width: 100vw;
 }
 
 h1 {
@@ -64,7 +64,7 @@ header {
 
 main {
   margin-top: 10rem;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 /* footer style */
