--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,9 +103,9 @@ footer {
   height: 32px;
   width: 32px;
   top: 25px;
-  right: 50px;
+  right: 25px;
   opacity: 0;
-  cursor: pointer;
+  z-index: 5;
 }
 
 .mobile-navbar-container .hamburger {
@@ -113,14 +113,20 @@ footer {
   font-size: 3rem;
   top: 25px;
   right: 25px;
-  z-index: 99;
+  z-index: 2;
 }
 
+#mobile-navlinks-logo {
+  margin: 3rem;
+  height: 10rem;
+  width: 10rem;
+}
 .mobile-navbar .mobile-navlinks {
-  padding-top: 10rem;
+  /* padding-top: 10rem; */
   transform: translate(-150%);
   display: flex;
   flex-direction: column;
+  align-items: center;
   transition: transform 0.5s ease-in-out;
   text-align: center;
   background-color: grey;
@@ -636,6 +642,4 @@ a {
   .st-nazaire-books-fig {
     padding: 2rem;
   }
-
-
 }
