--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@ html {
 
 body {
   max-width: 100vw;
+  background: url(../images/route-map.PNG) no-repeat 100% 80%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 h1 {
@@ -54,6 +57,10 @@ header {
   list-style: none;
   padding-right: 1rem;
   font-size: 2rem;
+}
+
+#navlinks li a:hover {
+  border-bottom: 2px solid white;
 }
 
 .active {
