--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Playpen+Sans&display=swap");
 /******* general styling **********/
 
 html {
@@ -17,6 +18,7 @@ body {
   background: url(../images/route-map.PNG) no-repeat 100% 80%;
   background-size: cover;
   background-attachment: fixed;
+  font-family: "Playpen Sans", cursive;
 }
 
 h1 {
