--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -706,7 +706,10 @@ fieldset input[type="checkbox"] {
 
   /* media page */
   .podcast {
-    width: 90%;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    padding: 15rem 1rem;
   }
 
   .youtube-documentary-video iframe {
