--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ h1 {
 .subhead {
   color: white;
   background-color: rgba(0, 0, 0, 0.4);
+  padding: 2rem 2rem;
 }
 /******* navbar  **********/
 
@@ -444,10 +445,10 @@ blockquote i {
   padding-right: 1rem;
 }
 
-a {
-  text-decoration: none;
+.citation {
+  text-decoration: underline;
   font-size: 22px;
-  color: black;
+  color: white;
 }
 
 /************* media page ***************/
