--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ header {
 #navlinks li {
   list-style: none;
   padding-right: 1rem;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 #navlinks li a:hover {
@@ -115,6 +115,11 @@ footer {
   position: absolute;
   bottom: 0.5rem;
   font-size: 1.5rem;
+  color: white;
+}
+
+.footer-external-imgs:hover ~ .footer-external-text {
+  color: blue;
 }
 
 /* mobile nav  */
