--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,7 +612,7 @@ fieldset input[type="checkbox"] {
 
 .button {
   width: 100px;
-  background: #27ae60;
+  background: darkslategray;
   font-weight: bold;
   color: white;
   border: 0 none;
@@ -624,7 +624,7 @@ fieldset input[type="checkbox"] {
   font-size: 14px;
 }
 .button:hover {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #27ae60;
+  box-shadow: 0 0 0 2px white, 0 0 0 3px darkslategray;
 }
 
 /************** media query *******************/
