--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,8 @@ footer {
 
 .slide-show-container {
   height: 100%;
-  width: 70%;
+  width: 100%;
+  max-width: 100%;
   position: relative;
   float: right;
 }
@@ -297,13 +298,16 @@ footer {
 
 .hero-header-text {
   position: absolute;
-  top: 36%;
-  left: 5%;
-  border: 2px solid red;
+  top: -4%;
+  left: 0%;
+  border: 2px solid darkslategray;
+  background: darkslategray;
+  color: white;
   padding: 2rem;
-  border-radius: 1rem;
-  font-size: 5rem;
-  width: 30%;
+  font-size: 3rem;
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
 }
 
 .hero-down-arrow {
@@ -311,6 +315,7 @@ footer {
   bottom: 0%;
   left: 50%;
   font-size: 5rem;
+  color: darkslategray;
 }
 
 /************ main content of index page *************/
@@ -631,10 +636,10 @@ fieldset input[type="checkbox"] {
 
 @media only screen and (max-width: 1026px) {
   /* index page */
-  .hero-header-text {
+  /* .hero-header-text {
     top: 15%;
     width: 35%;
-  }
+  } */
   .slide-show-container {
     width: 100%;
   }
@@ -686,8 +691,9 @@ fieldset input[type="checkbox"] {
 @media only screen and (max-width: 769px) {
   /* index page */
   .hero-header-text {
-    top: 3%;
-    width: 90%;
+    top: 0%;
+    width: 100%;
+    font-size: 2rem;
   }
   .st-nazaire-main-content-header {
     font-size: 2rem;
