all images changed to .webp file format

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,7 @@ footer {
 /* CSS Styles for each slide */
 
 .wrapper-one {
-  background-image: url("../images/st-nazaire-painting.jpg");
+  background-image: url("../images/st-nazaire-painting.webp");
 }
 
 .wrapper-two {
