--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
   max-width: 100vw;
-  background: url(../images/route-map.PNG) no-repeat 100% 80%;
+  background: url(../images/route-map.webp) no-repeat 100% 80%;
   background-size: cover;
   background-attachment: fixed;
   font-family: "Playpen Sans", cursive;
