--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,8 +252,8 @@ footer {
   right: 0;
   padding: 2rem;
   border-radius: 1rem;
-  color: black;
-  background: white;
+  color: white;
+  background: darkslategray;
 }
 
 /* Animations */
