hover effected added to vc citation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,12 @@ h1 {
 a {
   text-decoration: none;
 }
+
+.hov-effect:hover {
+  text-decoration: underline;
+  text-decoration-color: darkslategray;
+  color: darkslategray;
+}
 /******* navbar  **********/
 
 header {
